# caremote

./: .gitignore  CMakeLists.txt  README.md  config.ini  includes.h  main.c  resources.rc
files/: ImportConfig.glade~  addProfile.glade  configuration.glade  editProfile.glade  index.glade  popUpError.glade  session.glade
includes/: define.h  struct.h  struct_control.h  ui.h
lib/cJSON/tests/unity/examples/example_3/helper/: UnityHelper.h
src/: Database.c
src/Errors/: fatal_errors.c
src/GUI/: #index.glade#  addProfile.glade  addProfile.glade~  configuration.glade  configuration.glade~  editProfile.glade  editProfile.glade~  filesMenu.glade~  gui.c  index.glade  index.glade~  popUpError.glade  popUpError.glade~  session.glade  session.glade~
src/bd_requests/: config.c  profile.c  session.c
src/connexion/: connexion.c
src/control/: control.c
src/curl/: curl.c
src/data/: calculation.c
src/files/: config.c  exports.c  imports.c
src/styles/: style.css
styles/: style.css
